k8s/services/matrix/app/hookshot/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hookshot
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: hookshot
          image: halfshot/matrix-hookshot
          ports:
            - name: homeserver
              containerPort: 9993
              protocol: TCP
            - name: webhook
              containerPort: 9000
              protocol: TCP
            - name: metrics
              containerPort: 9001
              protocol: TCP
            - name: widgets
              containerPort: 9002
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /data/config.yml
              readOnly: true
              subPath: config.yaml
            - name: appservice
              mountPath: /data/registration.yml
              readOnly: true
              subPath: hookshot.yaml
            - name: passkey
              mountPath: /data/passkey.pem
              readOnly: true
              subPath: passkey.pem
      volumes:
        - name: config
          secret:
            secretName: hookshot-config
        - name: appservice
          secret:
            secretName: matrix-appservices
        - name: passkey
          secret:
            secretName: hookshot-passkey
