k8s/services/matrix/app/hookshot/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hookshot
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  ports:
    - name: homeserver
      port: 9993
      targetPort: homeserver
    - name: webhook
      port: 9000
      targetPort: webhook
    - name: metrics
      port: 9001
      targetPort: metrics
    - name: widgets
      port: 9002
      targetPort: widgets
