k8s/services/matrix/app/hookshot/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hookshot
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - matrix.lama-corp.space
  rules:
    - matches:
        - path:
            value: /hookshot/gitlab
        - path:
            value: /hookshot/webhook
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: hookshot
          port: 9000
    - matches:
        - path:
            value: /hookshot/widgetapi
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: hookshot
          port: 9002
